# gag

./: .gitignore  AGENTS.md  Dockerfile  README.md  arch1.md  docker-compose.yml  eis  py.typed  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: cd.yml  ci.yml
.qwen/: settings.json  settings.json.orig
.sisyphus/: boulder.json
.sisyphus/plans/: production-readiness-audit.md
agents/: __init__.py  _register.py  executor.py  orchestration.py  planner.py  prompts.py  reasoning.py  registry.py  retrieval.py  types.py  validator.py
api/: __init__.py  adapters.py  graphrag.py  knowledge.py  main.py  mcp.py
core/: __init__.py  auth.py  background.py  cache.py  config.py  di.py  errors.py  health.py  logging_config.py  memory.py  metrics.py  middleware.py  observability.py  pipeline.py  pool.py  protocols.py  text_utils.py
core/adapters/: __init__.py  base.py  clouds.py  mixins.py  powerplatform.py  sap.py  tanzu.py
core/constraints/: __init__.py  engine.py
core/knowledge/: __init__.py  adrs.py  constraints.py  graph.py  ontology.py  reference.py  resolver.py  taxonomy.py  usecases.py
core/patterns/: __init__.py  matcher.py  schema.py
core/secrets/: __init__.py
docs/: README.md  agents.md  api.md  architecture.md  async-standards.md  configuration.md  deployment.md  entity-cache.md  falkordb-schema.md  graphrag-audit.md  implementation-plan-v3.2.md  knowledge-domain-plan-v2.md  knowledge-domain-plan.md  pdlc-implementation-plan.md  platform-adapter-architecture.md  production-improvement-plan.md  production-readiness-audit.md  retrieval.md
docs/architecture/: 01-ingestion-pipeline.md  02-retrieval-pipeline.md  03-orchestration-agents.md  04-code-understanding.md  05-multimodal-diagrams.md  06-platform-adapters.md  README.md
documents/: __init__.py  api.py  colpali.py  confluence.py  diagram_formats.py  diagram_parser.py  diagram_sync.py  layout.py  models.py  multimodal.py  parse.py  pipeline.py  semantic_chunker.py  webdav.py
evaluation/: test_cases.py  test_ui_understanding.py
git/: __init__.py  api.py  credentials.py  parser.py  pipeline.py  repo.py
graph/: client.py  cypher_builder.py
helm/eis/: Chart.yaml  values.yaml
ingestion/: __init__.py  api.py  chunker.py  crossref.py  dockerfile_chunker.py  embedder.py  graphql_chunker.py  helm_chunker.py  indexer.py  istio_chunker.py  k8s_chunker.py  orchestrator.py  pipeline.py  structural_chunker.py
ingestion/architecture/: __init__.py  client.py  pipeline.py
ingestion/graphrag/: __init__.py  community_detector.py  entity_extractor.py  pipeline.py  relationship_inferrer.py
ingestion/knowledge_base/: __init__.py  client.py  pipeline.py
ingestion/requirements/: __init__.py  client.py  pipeline.py
ingestion/telemetry/: __init__.py  client.py  credentials.py  pipeline.py
ingestion/ticket/: __init__.py  client.py  credentials.py  pipeline.py
k8s/base/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secrets.yaml  service.yaml
llm/: router.py
migrations/: 001_initial.py  __init__.py
models/: __init__.py  graph.py  graphrag.py  ir.py  mcp.py  retrieval.py
multimodal/: ir_builder.py  vlm.py
retrieval/: __init__.py  classifier.py  code.py  code_graph.py  colbert.py  diagram.py  docs.py  entity_cache.py  entity_centric.py  fusion.py  graph.py  hybrid.py  knowledge.py  late_interaction.py  orchestrator.py  reasoning.py  telemetry.py  ticket.py
retrieval/citations/: __init__.py  base.py  builder.py  formatter.py
retrieval/reasoning/: __init__.py  entity_aware.py  iterative.py
retrieval/rerank/: __init__.py  base.py  pipeline.py  providers.py
tests/: __init__.py  conftest.py  test_agents.py  test_chunkers_specialized.py  test_core.py  test_cypher_builder.py  test_graphrag_api.py  test_graphrag_config.py  test_graphrag_ingestion.py  test_graphrag_retrieval.py  test_ingestion.py  test_integration.py  test_ir_builder.py  test_new_features.py  test_retrieval.py  test_retrieval_new.py  test_tools_execution.py  test_ui_api.py  test_ui_colpali_integration.py  test_ui_evidence_aggregator.py  test_ui_graph_builder.py  test_ui_issue_tracker.py  test_ui_models.py  test_ui_orchestrator.py  test_ui_pattern_matcher.py  test_ui_retriever.py  test_ui_sap_doc_parser.py  test_ui_sap_knowledge.py  test_ui_suggestion_tool.py  test_ui_vlm_extractor.py
tools/: base.py  day2.py  deployment.py  feedback.py  ideation.py  observability.py  requirements.py  testing.py
ui/: __init__.py  api.py  colpali_integration.py  evidence_aggregator.py  graph_builder.py  issue_tracker.py  models.py  pattern_matcher.py  retriever.py  sap_doc_parser.py  sap_knowledge.py  suggestion_tool.py  vlm_extractor.py
(+27 files in other folders)
