[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engineering-intelligence-system"
version = "3.0.0"
description = "Production-grade cognitive architecture for domain-specific reasoning within enterprise AI PDLC pipelines"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.12"
authors = [
    { name = "Engineering Team", email = "engineering@example.com" }
]
keywords = [
    "ai", "rag", "retrieval", "knowledge-graph", "llm",
    "cognitive-architecture", "hybrid-search", "vector-search", "graph-database",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
qdrant = ["qdrant-client>=1.7.0"]
docs = [
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "pdfplumber>=0.10.0",
    "markdown>=3.5.0",
    "python-magic>=0.4.27",
    "pyyaml>=6.0.0",
    "docling>=2.0.0",
    "pillow>=10.0.0",
]
embeddings = [
    "sentence-transformers>=2.2.0",
    "llama-index>=0.10.0",
    "llama-index-embeddings-huggingface>=0.7.0",
]
cache = ["redis>=5.0.0"]
vision = ["torch>=2.0.0", "torchvision>=0.15.0"]
multilingual = ["langdetect>=1.0.9"]
colbert = ["fastembed>=0.3.0"]
all = [
    "qdrant-client>=1.7.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "pdfplumber>=0.10.0",
    "markdown>=3.5.0",
    "python-magic>=0.4.27",
    "pyyaml>=6.0.0",
    "docling>=2.0.0",
    "pillow>=10.0.0",
    "sentence-transformers>=2.2.0",
    "llama-index>=0.10.0",
    "llama-index-embeddings-huggingface>=0.7.0",
    "redis>=5.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "langdetect>=1.0.9",
    "fastembed>=0.3.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "httpx>=0.27.0",
]
prod = [
    "qdrant-client>=1.7.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "pdfplumber>=0.10.0",
    "markdown>=3.5.0",
    "python-magic>=0.4.27",
    "pyyaml>=6.0.0",
    "sentence-transformers>=2.2.0",
    "llama-index>=0.10.0",
    "llama-index-embeddings-huggingface>=0.7.0",
    "redis>=5.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "langdetect>=1.0.9",
]

[project.scripts]
eis = "eis.cli:main"

[project.urls]
Homepage = "https://github.com/example/engineering-intelligence-system"
Documentation = "https://github.com/example/engineering-intelligence-system/docs"
Repository = "https://github.com/example/engineering-intelligence-system"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = ["tests/"]

[tool.ruff]
target-version = "py312"
line-length = 100
lint.select = ["E", "W", "F", "I", "N", "UP", "C4", "SIM", "RUF"]
lint.ignore = ["E501", "SIM108"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["F401", "E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
strict_optional = true

[tool.mypy.plugins.pydantic]
init_typed = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["--strict-markers", "--tb=short", "-ra"]
markers = [
    "asyncio: mark test as async",
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow running tests",
]
filterwarnings = ["ignore::DeprecationWarning", "ignore::PendingDeprecationWarning"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "*/tests/*", "*/test_*.py", "*__pycache__*", "*migrations*"]

[tool.coverage.report]
precision = 2
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
title = "Engineering Intelligence System - Coverage Report"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"